# advent-of-code

./: .gitignore  setup_day.sh  setup_year.sh
2015/rust/: Cargo.toml  expected.txt
2015/rust/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
2016/rust/: Cargo.toml  expected.txt
2016/rust/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2017/rust/src/: day15.rs  day20.rs  day3.rs  day4.rs  lib.rs
2018/rust/src/: day13.rs  day8.rs  day9.rs  lib.rs
2019/rust/src/: day10.rs  day16.rs  day23.rs  day24.rs  lib.rs
2019/rust/tests/: check-expected.rs
2020/rust/src/: day19.rs  day22.rs  lib.rs
2021/rust/: Cargo.toml
2021/rust/src/: day11.rs  day12.rs  day14.rs  day17.rs  day18.rs  day25.rs  day6.rs  lib.rs
2023/01/: NOTICE.md  example_result.txt
2023/02/: NOTICE.md
2023/python/: day1.py  main.py
2023/rust/: Cargo.toml  expected.txt
2023/rust/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  utils.rs
2023/rust/tests/: check-expected.rs
(+10 files in other folders)
