[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { git = "https://github.com/evenfurther/aoc" }

[build-dependencies]
aoc-build = { git = "https://github.com/evenfurther/aoc" }
