[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { git = "https://github.com/evenfurther/aoc" }
eyre = "0.6.9"
nalgebra = "0.32.3"
num = "0.4.1"
pathfinding = "4.4.0"

[build-dependencies]
aoc-build = { git = "https://github.com/evenfurther/aoc" }
